force-app/main/default/objects/ChildFieldDetails__mdt/ChildFieldDetails__mdt.object-meta.xml
<CustomObject>
    <label>Child Field Details</label>
    <pluralLabel>Child Field Details</pluralLabel>
</CustomObject>