force-app/main/default/objects/ChildFieldDetails__mdt/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <label>Field API Name</label>
    <metadataRelationshipControllingField>ChildFieldDetails__mdt.ObjectAPIName__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Child_Field_Details</relationshipLabel>
    <relationshipName>Child_Field_Details</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>