force-app/main/default/objects/ChildFieldDetails__mdt/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <label>Object API Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Child_Field_Details</relationshipLabel>
    <relationshipName>Child_Field_Details</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>