force-app/main/default/objects/ChildFieldDetails__mdt/fields/ParentObjectDetails__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectDetails__c</fullName>
    <label>Parent Object Details</label>
    <referenceTo>ParentObjectDetails__mdt</referenceTo>
    <relationshipLabel>Child Field Details</relationshipLabel>
    <relationshipName>Child_Field_Details</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>