force-app/main/default/objects/ChildFieldDetails__mdt/fields/UseFor__c.field-meta.xml
<CustomField>
    <fullName>UseFor__c</fullName>
    <label>Use For (Purpose)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edit Record</fullName>
                <default>true</default>
                <label>Edit Record</label>
            </value>
            <value>
                <fullName>Add New Record</fullName>
            </value>
            <value>
                <fullName>Both Edit/New Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>